--- a/Styles/portfolio.css
+++ b/Styles/portfolio.css
@@ -7,6 +7,10 @@
 }
 
 /* shared style */
+
+.secondary-bg{
+    background-color: #FFF8F3;
+}
 .text-primary{
     color: #FD6E0A;
 }
@@ -24,6 +28,17 @@
     border-radius: 5px;
 
 }
+.section-title{
+    font-size: 35px;
+    font-weight: bold;
+    color:#181818;
+
+}
+.section-description{
+    font-size: 18px;
+    color: #757575;
+}
+
 /* header */
 
 .header{
@@ -84,4 +99,37 @@ max-width: 580px;
 
 .banner-profile-pic{
     width: 580px;
+}
+
+/* main styles */
+
+.main{
+    max-width: 1140px;
+    margin: 0 auto;
+
+}
+
+/* about styles */
+
+.about{
+    border-radius: 10px;
+    padding: 130px 150px;
+    text-align: center;
+    margin-top: 130px;
+    
+}
+.about-items{
+    display: flex;
+    justify-content: space-around;
+  
+}
+
+.item-title {
+    margin-bottom: 0;  /* Decrease space between title and description */
+}
+
+.item-description{
+    margin-top: 0;
+    font-weight: bold;
+
 }
