--- a/Styles/portfolio.css
+++ b/Styles/portfolio.css
@@ -39,6 +39,10 @@
     color: #757575;
 }
 
+.text-center{
+    text-align: center;
+}
+
 /* header */
 
 .header{
@@ -103,10 +107,15 @@ max-width: 580px;
 
 /* main styles */
 
-.main{
+main{
     max-width: 1140px;
     margin: 0 auto;
 
+}
+
+main section{
+        margin-top: 130px;
+        margin-bottom: 130px;
 }
 
 /* about styles */
@@ -115,8 +124,7 @@ max-width: 580px;
     border-radius: 10px;
     padding: 130px 150px;
     text-align: center;
-    margin-top: 130px;
-    
+
 }
 .about-items{
     display: flex;
@@ -132,4 +140,16 @@ max-width: 580px;
     margin-top: 0;
     font-weight: bold;
 
+}
+
+/* skills section styles */
+.skills-container{
+    display: flex;
+    gap: 24px;
+}
+.skill{
+    padding: 30px;
+    border-radius: 5px;
+    box-shadow: 0px 6px 50px 0 rgba(0, 0, 0, 0.06);
+    
 }
